# myNotes

./: CALBOX_ENHANCEMENTS_EPIC.md  CALCULATION_BOX_EPIC.md  DIAGRAM_FEATURES.md  EDITOR_FEATURES_EPIC.md  EXCEL_EXPORT_EPIC.md  EXPENSE_TRACKER_ANDROID_EPIC.md  FEATURES.md  FEATURE_ADDITIONS_EPIC.md  FEATURE_CATALOG.md  PROJECT_CONTEXT.md  SAMSUNG_NOTES_HANDWRITING_EPIC.md  YJS_CRDT_SYNC_EPIC.md  cal_box_feature_spec.md  capacitor.config.ts  frontend-ui-redesign-epic.md  index.html  package-lock.json  package.json  scratch_test.js  scratch_test2.js  vite.config.ts
.github/workflows/: deploy.yml
docs/: metrics_block_epic.md  multi_tag_rows_epic.md
graphify-out/: .graphify_labels.json  .graphify_python  .graphify_root  GRAPH_REPORT.md  cost.json  graph.html  graph.json  manifest.json
graphify-out/cache/: stat-index.json
public/: manifest.json  sw.js
scratch/: check_output.txt
src/: App.svelte  app.css  app.d.ts  svelte-elements.d.ts  tokens.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/lib/actions/: touch.ts
src/lib/components/: AiWorkspace.svelte  AnalyticsView.svelte  AppHeader.svelte  AppLayout.svelte  BottomSheet.svelte  BudgetView.svelte  CanvasEditor.svelte  ChartBlock.svelte  CommandPalette.svelte  ConflictResolver.svelte  DashboardView.svelte  DiagramEditor.svelte  DocumentsView.svelte  DrawIOEditor.svelte  DropdownMenu.svelte  Editor.svelte  ErrorBanner.svelte  FocusView.svelte  GoogleLogo.svelte  GraphView.svelte  LinkPreview.svelte  MarkdownImportModal.svelte  (+26 more)
(+38 files in other folders)
