[package]
name = "mynotes"
version = "1.0.0"
description = "MyNotes - Native Desktop & Mobile Notes App"
authors = ["you"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
tauri = { version = "2.11.0", features = [] }
tauri-plugin-fs = "2.5.0"
tauri-plugin-dialog = "2.7.0"
tauri-plugin-shell = "2.3.0"
tauri-plugin-store = "2.4.0"
tauri-plugin-os = "2.3.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[lib]
name = "mynotes_lib"
crate-type = ["staticlib", "cdylib", "rlib"]
